--- a/CurrencyFreelanceProj/Views/Account/login.cshtml
+++ b/CurrencyFreelanceProj/Views/Account/login.cshtml
@@ -20,6 +20,7 @@
                     <td>
                         <label>Password</label>
                         <input type="text" name="pass" />
+                        @Html.ValidationMessage("customError", new { @class = "text-danger" })
                     </td>
                 </tr>
                 <tr>
